# lean-tech-agents

./: .gitignore  CLAUDE.md  README.md  SETUP.md  push_to_github.ps1  push_to_github.sh  pyproject.toml
.claude/agents/: builder.md  planner.md  reviewer.md
src/lean_agents/: __init__.py  cli.py  config.py  logging.py  mcp_server.py  models.py  orchestrator.py
src/lean_agents/agents/: __init__.py  base.py  builder.py  planner.py  reviewer.py
src/lean_agents/lean/: __init__.py  kanban.py  piscar.py  principles.py
src/lean_agents/tools/: __init__.py  knowledge.py  metrics.py  quality.py
tests/: test_kanban.py
